[gd_scene load_steps=10 format=3 uid="uid://fl224xwk37sl"]

[ext_resource type="Texture2D" uid="uid://c0hisog6kd4bj" path="res://Assets/icon.svg" id="1_lttd3"]
[ext_resource type="Script" path="res://Scripts/Boss/boss.gd" id="1_vgxb7"]
[ext_resource type="Script" path="res://Scripts/Boss/feet.gd" id="3_f4frn"]
[ext_resource type="Script" path="res://Scripts/Boss/hands.gd" id="4_swuvd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ackkn"]
radius = 8.60811

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dkcf5"]
radius = 3.0562

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tl6ao"]
radius = 3.18007

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0mtwb"]
radius = 11.4351

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2qboq"]
radius = 14.8466

[node name="Boss" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_vgxb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ackkn")

[node name="Feet" type="Node3D" parent="."]
script = ExtResource("3_f4frn")

[node name="Left" type="Area3D" parent="Feet"]
collision_layer = 48
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Feet/Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.22042, 0, 0)
shape = SubResource("CylinderShape3D_dkcf5")

[node name="Sprite3D" type="Sprite3D" parent="Feet/Left"]
transform = Transform3D(4.905, 0, 0, 0, 1.6, 0, 0, 0, 1, 5.22042, 0, 0)
modulate = Color(0.891854, 0.00108814, 0.955406, 1)
billboard = 1
texture = ExtResource("1_lttd3")

[node name="Right" type="Area3D" parent="Feet"]
collision_layer = 48
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Feet/Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.16422, 0, 0)
shape = SubResource("CylinderShape3D_tl6ao")

[node name="Sprite3D" type="Sprite3D" parent="Feet/Right"]
transform = Transform3D(4.905, 0, 0, 0, 1.6, 0, 0, 0, 1, -5.16422, 0, 0)
modulate = Color(0.931858, 0.000935277, 0.965965, 1)
billboard = 1
texture = ExtResource("1_lttd3")

[node name="Hands" type="Node3D" parent="."]
script = ExtResource("4_swuvd")

[node name="Left" type="Area3D" parent="Hands"]
collision_layer = 0
collision_mask = 48

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hands/Left"]

[node name="Right" type="Area3D" parent="Hands"]
collision_layer = 0
collision_mask = 48

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hands/Right"]

[node name="Feet Proximity" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Feet Proximity"]
shape = SubResource("CylinderShape3D_0mtwb")

[node name="Hand Proximity" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hand Proximity"]
shape = SubResource("CylinderShape3D_2qboq")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="Feet Proximity" to="." method="_on_feet_proximity_body_entered"]
[connection signal="body_exited" from="Feet Proximity" to="." method="_on_feet_proximity_body_exited"]
[connection signal="body_entered" from="Hand Proximity" to="." method="_on_hand_proximity_body_entered"]
[connection signal="body_exited" from="Hand Proximity" to="." method="_on_hand_proximity_body_exited"]
